--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,41 @@
     color: #fff;
 }
 
+.jumbotron-aqua{
+    text-align: center;
+    background-image: url("https://img.alicdn.com/imgextra/i3/TB1L2aIHpXXXXb7apXXXXXXXXXX_!!0-item_pic.jpg ");
+    background-size: cover;
+    padding: 3rem;
+    color: #fff;
+}
+
+.jumbotron-f1{
+    text-align: center;
+    background-image: url("https://cmgstatesmanaustin.files.wordpress.com/2016/10/rgz-f1-usgp-07.jpg");
+    background-size: cover;
+    background-position: bottom;
+    color: #fff;
+    padding: 3rem;
+}
+
+.jumbotron-fed{
+    text-align: center;
+    background-image: url("https://i.imgur.com/76Yvrpd.jpg");
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    padding: 3rem;
+}
+
+.jumbotron-soc{
+    text-align: center;
+    background-image: url("http://newlovewallpapers.in/images/friendship-love-images-and-wallpaper/friendship-love-images-and-wallpaper-9.jpg");
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    padding: 3rem;
+}
+
 a {
     color: inherit;
     text-decoration: none;
